# mars

./: .gitignore  GITHUB_UPLOAD_INSTRUCTIONS.md  PACKAGE_SUMMARY.md  README.md  environment.linux-gpu.yml  pyproject.toml  requirements.txt
configs/: adk_1s3g.yaml  adk_1s3g_nofamily.yaml  benchmark_family_prior_with.yaml  benchmark_family_prior_without.yaml  benchmark_ninepack.yaml  benchmark_sixpack.yaml  benchmark_triplet.yaml  benchmark_twelvepack.yaml  benchmark_twelvepack_final.yaml  benchmark_twelvepack_neural_default.yaml  benchmark_twelvepack_neural_hybrid.yaml  calb_1lbt.yaml  cld_3q09_notopic.yaml  cld_3q09_topic.yaml  esterase_7b4q.yaml  esterase_7b4q_nofamily.yaml  petase_5xfy.yaml  petase_5xh3.yaml  sfgfp_2b3p.yaml  sod_1y67.yaml  sod_1y67_nofamily.yaml  subtilisin_2st1.yaml  t4l_171l.yaml  tem1_1btl.yaml
datasets/: README.md
docs/: assay_standard.md  github_readme_content_v1.md  github_release_manifest_v1.md  heldout_family_split.md  mars_benchmark_standard.md  mars_biology_completion_status_v1.md  mars_field_case_study_figure_plan_v1.md  mars_field_core_claims_v1.md  mars_field_core_claims_v2.md  mars_field_execution_record_v1.md  mars_field_experiment_plan_v1.md  mars_field_figure1_blueprint_v1.md  mars_field_figure1_spec_v2.md  mars_field_figure_1_4_cn_storyboard_v1.md  mars_field_figure_1_4_masterplan_v1.md  mars_field_figure_1_5_execution_blueprint_cn_v1.md  mars_field_figure_legends_v1.md  mars_field_figure_legends_v2.md  mars_field_figure_legends_v3.md  mars_field_figure_panel_spec_cn_v2.md  mars_field_final_technical_route_v2.md  (+31 more)
(+218 files in other folders)
