[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marsstack"
version = "0.1.0"
description = "MARS-FIELD: residue-field protein engineering research stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas>=2.0",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "python-docx>=1.1",
    "gemmi>=0.6",
]

[project.optional-dependencies]
neural = [
    "torch>=2.4",
]
test = [
    "pytest>=7.4",
]

[tool.setuptools]
packages = [
    "marsstack",
    "marsstack.field_network",
    "marsstack.fusion_ranker",
    "marsstack.pipeline",
    "marsstack.topic_score",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
